--- a/css/style.css
+++ b/css/style.css
@@ -3,15 +3,13 @@ body {
     padding: 0px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.2rem;
-    color: red;
     font-weight: bold;
-    text-transform: uppercase;
     background: url(../img/img1.jpg) no-repeat center;
     background-attachment: fixed;
     line-height: 1.3;
 }
 h1 {
-    font-size: 4rem;
+    font-size: 7rem;
     color: black;
     font-family: "Anton", Times, serif, arial;
     font-style: italic;
@@ -22,13 +20,27 @@ h1 {
     line-height: 1.3;
 }
 
-p {
-    color: rgb(34, 2, 2);
+p{
+
+    font-size: 1.5rem;
+    color: black;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    line-height: 1.3;
+
+}
+
+span{
+
+    text-transform: uppercase;
+    font-size: 1.8rem;
 }
 
 label {
     display: block;
+    text-transform: uppercase;
 }
+
+
 
 input {
     font-size: 1.2rem;
@@ -50,6 +62,7 @@ button {
     text-transform: uppercase;
     cursor: pointer;
 }
+
 
 .checkbox,
 radio {
@@ -82,9 +95,8 @@ radio label {
 }
 
 .escolha label {
-    color: rgb(17, 35, 94);
-    font-size: 1rem;
-    text-transform: capitalize;
+    color: rgb(1, 4, 17);
+    font-size: 1.125rem;
     margin-bottom: 8px;
     margin-left: 0px;
 }
