--- a/css/style.css
+++ b/css/style.css
@@ -20,17 +20,14 @@ h1 {
     line-height: 1.3;
 }
 
-p{
-
+p {
     font-size: 1.5rem;
     color: black;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: Georgia, "Times New Roman", Times, serif;
     line-height: 1.3;
-
 }
 
-span{
-
+span {
     text-transform: uppercase;
     font-size: 1.8rem;
 }
@@ -40,14 +37,13 @@ label {
     text-transform: uppercase;
 }
 
-
-
 input {
     font-size: 1.2rem;
     padding: 15px;
     border: 5px solid black;
     border-radius: 4px;
     background: #ccc;
+    margin-bottom: 15px;
 }
 
 button {
@@ -62,7 +58,6 @@ button {
     text-transform: uppercase;
     cursor: pointer;
 }
-
 
 .checkbox,
 radio {
@@ -110,4 +105,9 @@ select {
 textarea {
     font-size: 1.5rem;
     font-family: Arial, Helvetica, sans-serif;
-    
+    margin-top: 10px;
+}
+
+.mensagem label {
+    margin-top: 20px;
+}
