--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,13 @@
 body {
     padding: 0px;
     padding: 0px;
-    font-family: Arial, Helvetica, sans-serif;
     font-size: 1.2rem;
     font-weight: bold;
-    background: url(../img/img1.jpg) no-repeat center;
+    background: url(../img/img1.jpg) no-repeat center center;
     background-attachment: fixed;
     line-height: 1.3;
 }
-h1 {
+.titulo-principal {
     font-size: 7rem;
     color: black;
     font-family: "Anton", Times, serif, arial;
@@ -20,14 +19,15 @@ h1 {
     line-height: 1.3;
 }
 
-p {
+.texto-principal {
     font-size: 1.5rem;
     color: black;
     font-family: Georgia, "Times New Roman", Times, serif;
     line-height: 1.3;
 }
 
-span {
+.texto-principal-quem {
+    text-decoration: underline;
     text-transform: uppercase;
     font-size: 1.8rem;
 }
@@ -46,7 +46,7 @@ input {
     margin-bottom: 15px;
 }
 
-button {
+.btn-envio {
     display: block;
     padding: 10px 20px;
     margin-top: 30px;
@@ -57,6 +57,11 @@ button {
     border: 2px solid black;
     text-transform: uppercase;
     cursor: pointer;
+}
+
+.btn-envio:hover {
+    background: rgb(245, 4, 4);
+    color: white;
 }
 
 .checkbox,
@@ -110,4 +115,39 @@ textarea {
 
 .mensagem label {
     margin-top: 20px;
+}
+
+.anuncio {
+    text-transform: uppercase;
+}
+
+@media (max-width: 800px) {
+    .container {
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+
+    .titulo-principal {
+        font-size: 5rem;
+    }
+
+    .texto-principal-quem {
+        font-size: 1rem;
+    }
+
+    .texto-principal {
+        font-size: 1.2rem;
+    }
+
+    label {
+        font-size: 1rem;
+    }
+
+    .escolha label {
+        font-size: 0.725rem;
+    }
+
+    .questionamento-p {
+        font-size: 1.3rem;
+    }
 }
