--- a/css/style.css
+++ b/css/style.css
@@ -3,20 +3,10 @@ body {
     padding: 0;
     font-size: 1.2rem;
     font-weight: 700;
-    background: url(../img/img1.jpg) no-repeat center center;
-    background-attachment: fixed;
     line-height: 1.3;
+    background: #ccc;
 }
-img {
-    max-width: 100%;
-    height: auto;
-    display: block;
-}
-.container {
-    max-width: 1200px;
-    margin: 0;
-    padding: 0;
-}
+
 .titulo-principal {
     font-size: 7rem;
     color: #000;
@@ -122,6 +112,30 @@ textarea {
 .questionamento-p {
     text-transform: uppercase;
 }
+
+.footer {
+    background: #000000;
+}
+
+.footer-texto {
+    font-size: 1.5rem;
+    line-height: 1.33;
+    color: white;
+}
+
+.footer-contato li {
+    font-weight: bold;
+    font-size: 1rem;
+    line-height: 1.1;
+    color: white;
+    margin-bottom: 30px;
+    list-style: none;
+}
+
+.footer-contato li a {
+    color: white;
+}
+
 @media (max-width: 800px) {
     .container {
         display: grid;
@@ -152,7 +166,15 @@ textarea {
     .btn-envio {
         padding: 4px 8px;
     }
+    .footer-container {
+        grid-template-columns: 1fr;
+        gap: 40px;
+    }
+    .footer-contato li {
+        font-size: 1.5rem;
+    }
 }
+
 @media (max-width: 300px) {
     .titulo-principal {
         font-size: 3rem;
