--- a/css/style-old.css
+++ b/css/style-old.css
@@ -1,50 +1,36 @@
 body {
-    padding: 0px;
-    padding: 0px;
-    font-size: 1.2rem;
-    font-weight: bold;
-    background: url(../img/img1.jpg) no-repeat center center;
-    background-attachment: fixed;
-    line-height: 1.3;
-}
-
-img {
-    max-width: 100%;
-    height: auto;
-    display: block;
-}
-
-.container {
-    max-width: 1200px;
-    margin: 0;
     padding: 0;
+    padding: 0;
+    font-size: 1.2rem;
+    font-weight: 700;
+    line-height: 1.3;
+    background: #ccc;
 }
 
 .titulo-principal {
     font-size: 7rem;
-    color: black;
-    font-family: "Anton", Times, serif, arial;
+    color: #000;
+    font-family: Anton, Times, serif, arial;
     font-style: italic;
     text-transform: uppercase;
     text-align: center;
     text-overflow: initial;
-    text-shadow: red 2px 2px;
+    text-shadow: rgb(233, 34, 20) 2px 2px;
     line-height: 1.3;
 }
-
 .texto-principal {
     font-size: 1.5rem;
-    color: black;
+    color: #000;
     font-family: Georgia, "Times New Roman", Times, serif;
     line-height: 1.3;
 }
-
 .texto-principal-quem {
+    text-rendering: optimizeSpeed;
     text-decoration: underline;
     text-transform: uppercase;
-    font-size: 1.8rem;
+    font-size: 2rem;
+    color: rgb(20, 2, 1);
 }
-
 label {
     display: block;
     text-transform: uppercase;
@@ -53,30 +39,28 @@ label {
 input {
     font-size: 1.2rem;
     padding: 15px;
-    border: 5px solid black;
+    border: 5px solid #000;
     border-radius: 4px;
     background: #ccc;
     margin-bottom: 15px;
 }
-
 .btn-envio {
     display: block;
     padding: 10px 20px;
     margin-top: 30px;
     margin-left: 5px;
-    font-weight: bold;
+    margin-bottom: 20px;
+    font-weight: 700;
     font-size: 1.5rem;
     border-radius: 2px;
-    border: 2px solid black;
+    border: 2px solid #000;
     text-transform: uppercase;
     cursor: pointer;
 }
-
 .btn-envio:hover {
-    background: rgb(245, 4, 4);
-    color: white;
+    background: #f50404;
+    color: #fff;
 }
-
 .checkbox,
 radio {
     display: grid;
@@ -89,31 +73,27 @@ radio input {
     width: 20px;
     height: 20px;
 }
-
 .checkbox label,
 radio label {
     display: inline-block;
 }
-
 .escolha {
     display: inline-block;
     margin-right: 10px;
     padding-bottom: 15px;
 }
-
 .escolha input {
     align-items: center;
     width: 15px;
     height: 15px;
 }
-
 .escolha label {
-    color: rgb(1, 4, 17);
+    color: #010411;
     font-size: 1.125rem;
     margin-bottom: 8px;
-    margin-left: 0px;
+    margin-left: 0;
+    text-transform: capitalize;
 }
-
 .select-options {
     font-size: 1.2rem;
     padding: 10px 20px;
@@ -121,61 +101,98 @@ radio label {
     margin-left: 0;
     padding-left: 0;
 }
-
 textarea {
     font-size: 1.5rem;
     font-family: Arial, Helvetica, sans-serif;
     margin-top: 10px;
 }
-
 .mensagem label {
     margin-top: 20px;
 }
-
 .anuncio {
     text-transform: uppercase;
 }
-
 .questionamento-p {
     text-transform: uppercase;
 }
+
+.footer {
+    background: black;
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 40px;
+    width: 100%;
+    height: 100%;
+}
+
+.footer-container {
+    display: block;
+    box-sizing: border-box;
+    align-items: start;
+    margin: 0;
+}
+.footer-texto {
+    margin-left: 15px;
+    font-size: 1.5rem;
+    line-height: 1.33;
+    color: white;
+}
+
+.footer-contato li {
+    font-weight: bold;
+    font-size: 1rem;
+    line-height: 1.1;
+    color: white;
+    margin-bottom: 30px;
+    list-style-type: none;
+}
+
+.footer-contato li a {
+    color: white;
+    text-decoration: none;
+    list-style: none;
+}
+
+.links:hover {
+    background: rgb(199, 30, 143);
+}
+
 @media (max-width: 800px) {
     .container {
         display: grid;
         grid-template-columns: 1fr;
     }
-
     .titulo-principal {
         font-size: 5rem;
     }
-
     .texto-principal-quem {
         font-size: 1rem;
     }
-
     .texto-principal {
         font-size: 1.2rem;
     }
-
     label {
         font-size: 1rem;
     }
-
     .escolha label {
         font-size: 0.725rem;
     }
-
     .questionamento-p {
         font-size: 1rem;
     }
-
     .select option {
         font-size: 0.9rem;
         padding: 7px 14px;
     }
-
     .btn-envio {
         padding: 4px 8px;
+    }
+    .footer-container {
+        grid-template-columns: 1fr;
+        gap: 40px;
+    }
+    .footer-contato li {
+        font-size: 1.5rem;
     }
 }
 
@@ -184,71 +201,69 @@ textarea {
         font-size: 3rem;
         text-align: left;
     }
-
     .texto-principal {
         font-size: 0.7rem;
         flex-wrap: wrap;
         text-align: start;
     }
-
     .questionamento-p {
-        font-size: 0.7rem;
+        font-size: 1.2rem;
     }
-
     .input {
         font-size: 0.6rem;
         padding: 4px;
-        border: 5px solid black;
+        border: 5px solid #000;
         border-radius: 4px;
         background: #ccc;
         margin-bottom: 8px;
     }
-
     .select option {
         font-size: 0.6rem;
         padding: 5px 10px;
     }
-
     .select-options label {
         font-size: 0.6rem;
     }
-
     .mensagem label {
         font-size: 0.6rem;
     }
-
     .dados label {
         font-size: 0.7rem;
     }
-
     .dados input {
         padding: 5px;
     }
-
     .date input {
         padding: 4px;
     }
-
     .date label {
         font-size: 0.6rem;
     }
-
     .checkbox label {
         font-size: 0.7rem;
     }
-
     .checkbox input,
     radio input {
         width: 10px;
         height: 10px;
     }
-
     .btn-envio {
         display: block;
         padding: 1.5px 3px;
     }
-
     .escolha label {
-        font-size: 0.5rem;
+        font-size: 1rem;
+    }
+
+    .footer-container {
+        grid-template-columns: 1fr;
+        gap: 40px;
+    }
+    .footer-contato li {
+        font-size: 1rem;
+    }
+
+    .footer-texto {
+        font-size: 1rem;
     }
 }
