--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,40 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.header-menu {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: right;
+}
+
+.header-menu li {
+    list-style-type: none;
+}
+.header-menu a {
+    font-size: 1.125rem;
+    line-height: 1.3;
+    padding: 10px 20px;
+    text-decoration: none;
+    color: #000000;
+    display: block;
+    list-style: none;
+    background: rgb(243, 243, 243);
+    border-radius: 4px;
+    margin-right: 10px;
+}
+
+.header-menu a:hover {
+    background: rgb(168, 88, 88);
+}
+
+.header-div {
+    background: #000000;
+    width: 100%;
+    height: 100%;
+    padding: 15px;
+    margin: 5px;
+}
 .titulo-principal {
     font-size: 7rem;
     color: #000;
@@ -79,19 +113,16 @@ input {
     background: #f50404;
     color: #fff;
 }
-.checkbox,
-radio {
-    display: grid;
-    grid-template-columns: auto 1fr;
-    gap: 10px;
-    align-items: center;
-}
+
 .checkbox input,
+.anuncio input,
 radio input {
     width: 20px;
     height: 20px;
+    border-radius: 4px;
 }
 .checkbox label,
+.anuncio label,
 radio label {
     display: inline-block;
 }
@@ -118,6 +149,10 @@ radio label {
     margin-bottom: 10px;
     margin-left: 0;
     padding-left: 0;
+}
+
+.select-options select {
+    padding: 5px;
 }
 textarea {
     font-size: 1.5rem;
