--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,17 @@
-@media (prefers-color-scheme: dark) {
-    :root {
-    }
-}
-
 body {
     padding: 0px;
-    margin-left: 5px;
+    margin: 0px;
     font-size: 1.2rem;
     font-weight: 700;
     line-height: 1.3;
     background: #ccc;
-    font-family: Arial, Helvetica, sans-serif;
 }
 
 h1,
 h2,
 p {
     margin: 0px;
+    padding: 0px;
 }
 
 .header-menu {
@@ -24,6 +19,9 @@ p {
     flex-wrap: wrap;
     gap: 15px;
     justify-content: right;
+    text-transform: uppercase;
+    font-size: 1.5rem;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .header-menu li {
@@ -61,6 +59,7 @@ p {
     line-height: 1.3;
 }
 .texto-principal {
+    margin-left: 10px;
     font-size: 1.5rem;
     color: #000;
     font-family: Georgia, "Times New Roman", Times, serif;
@@ -85,6 +84,7 @@ p {
 label {
     display: block;
     text-transform: uppercase;
+    margin-left: 10px;
 }
 
 input {
@@ -94,12 +94,13 @@ input {
     border-radius: 4px;
     background: #ccc;
     margin-bottom: 15px;
+    margin-left: 10px;
 }
 .btn-envio {
     display: block;
     padding: 10px 20px;
     margin-top: 30px;
-    margin-left: 5px;
+    margin-left: 10px;
     margin-bottom: 20px;
     font-weight: 700;
     font-size: 1.5rem;
@@ -127,7 +128,7 @@ radio label {
 }
 .escolha {
     display: inline-block;
-    margin-right: 10px;
+    margin-left: 10px;
     padding-bottom: 15px;
 }
 .escolha input {
@@ -146,7 +147,7 @@ radio label {
     font-size: 1.2rem;
     padding: 10px 20px;
     margin-bottom: 10px;
-    margin-left: 0;
+    margin-left: 10px;
     padding-left: 0;
 }
 
@@ -159,15 +160,18 @@ textarea {
     font-family: Georgia, "Times New Roman", Times, serif, Arial, Helvetica,
         sans-serif;
     margin-top: 10px;
+    margin-left: 10px;
 }
 .mensagem label {
     margin-top: 20px;
+    margin-left: 10px;
 }
 .anuncio {
     text-transform: uppercase;
 }
 .questionamento-p {
     text-transform: uppercase;
+    margin-left: 10px;
 }
 .link-referencia {
     list-style: none;
@@ -227,10 +231,6 @@ textarea {
 }
 
 @media (max-width: 800px) {
-    .container {
-        display: grid;
-        grid-template-columns: 1fr;
-    }
     .titulo-principal {
         font-size: 5rem;
     }
